app/assets/stylesheets/api/stocks.scss
.show-body {
  width: 100%;
  display: flex;
  flex-direction: column;
}

.chart-container {
  display: flex;
  align-items: center;
}


.stock-info-container {
  width: 80%;
  margin-left: 3.5em;
  margin-bottom: 1.5em;
}

/* Navbar */

.stock-show-header {
  position: fixed;
  width: 100%;
  height: 5em;
  z-index: 100;
  background-color: white;
}

.top-nav {
  height: 100%;
  width: 100%;
  display: flex;
  justify-content: space-between;
}

.left-nav {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  width: 60%;
  height: 100%;
}

.stock-searchbar {
  position: relative;
  display: flex;
  justify-content: center;
  width: 30em;
  height: 100%;
  margin-left: 2em;
  box-sizing: border-box;
}

.searchbar-container {
  position: absolute;
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  width: 28em;
  height: fit-content;
  z-index: 300;
  top: 25%;
  border-radius: .25em;
  box-sizing: border-box;
  border: 1px solid rgb(179, 179, 179);
}

.searchbar-img {
  position: absolute;
  top: 0;
  left: 0;
  width: 2.25em;
  height: 2.25em;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 0.25em;
}

.searchbar-img p {
  width: 60%;
  height: 60%;
  background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSTapkqq_zlEkvQW9V9QzAtte399VUa-DM7WA&usqp=CAU);
  background-position: center;
  background-size: contain;
  background-repeat: no-repeat;
}

.searchbar-input {
  position: relative;
  text-transform: uppercase;
  box-sizing: none;
  width: 90%;
  height: 2.75em;
  border-radius: .25em;
  outline: none;
  border: none;
}

.searchbar-container:hover {
  outline: none;
  border: 1px solid white;
  box-shadow: 0 0 10px rgba(128, 128, 128, 0.575)
}

.searchbar-results {
  display: none;
  flex-direction: column;
  align-items: flex-end;
  width: 100%;
  z-index: 300;
  background-color: white;
  // border-left: 1px solid rgb(80, 80, 80);
  // border-radius: 0.25em;
}

.searchbar-results h2, .searchbar-results a {
  font-size: small;
  padding: 1em;
  width: 100%;
  border-radius: .25em;
}

.searchbar-results a {
  display: flex;
}

#search-no-matches {
  font-size: small;
  padding: 1em;
  width: 100%;
  border-radius: .25em;
}

.search-result-symbol {
  width: 17%;
}

.searchbar-results a:hover {
  background-color: rgb(219, 255, 219);
}

.searchbar-input:focus + .searchbar-results {
  display: flex;
  border-radius: .25em;
  // outline: lightgreen;
  // border: 2px solid lightgreen;
}

.searchbar-results:hover {
  display: flex;
}

.searchbar-results-hide {
  display: none;
}


// .search-input {
//   text-transform: uppercase;
//   box-sizing: border-box;
//   outline-style: none;
//   box-shadow:none;
//   border-color: transparent;
//   border: 1px solid rgb(180, 180, 180);
//   border-radius: 0.25em;
//   width: 20em;
//   height: 2.5em;
// }

// .search-input:focus {
//   box-sizing: border-box;
//   outline-style:none;
//   box-shadow:none;
//   border-color:transparent;
//   border: 1px solid rgb(66, 207, 160);
// }

// .go-btn {
//   height: 2em;
//   width: 5em;
//   border-radius: 3em;
//   font-size: medium;
//   font-weight: bold;
//   color: black;
//   margin-left: 1em;
//   background-color: rgb(66, 207, 160);
// }

// .go-btn:hover { 
//   color: black;
//   background-color: rgba(66, 207, 160, 0.747);
// }

.right-nav {
  display: flex;
  justify-content: space-around;
  align-items: center;
  margin-right: 1em;
  width: 40%;
}

.right-nav div {
  margin-left: 1.0em;
  margin-right: 1.0em ;
  font-size: large;
  font-weight: bold;
}

.right-nav div:hover:not(#greeting) {
  color:  rgb(66, 207, 160);
  cursor: pointer;
}

.nav-dropdown {
  cursor: pointer;
  position: relative;
}

.nav-dropdown-content {
  display: none;
  position: absolute;
  border-radius: .5em;
  background-color: white;
  right: 1em;
  border: 1px solid lightgrey ;
  color: black;
  z-index: 1;
}

.nav-dropdown-content p {
  padding: 5px;
  margin-bottom: 5px;
}

.nav-dropdown-content p:hover {
  background-color: rgb(236, 241, 243);
}

.nav-dropdown:hover .nav-dropdown-content {
  display: block;
}


/* Navbar end */



/* Dark Mode*/
.show-body-dark {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: black;
     color: white;
}

.show-body-dark button {
    font-size: small;
}

.show-body-dark button:hover {
     color: rgb(66, 207, 160);
}

.show-body-dark span{
    background-color: black;
    color: white;
}

.show-body-dark ul button{
    background-color: black;
    color: white;
}

.show-body-dark .stock-bar span:hover {
  color: black
}

.show-body-dark .selected {
    color: rgb(66, 207, 160);
    text-decoration: underline;
    font-weight: bold;
}

.show-body-dark .nav-dropdown-content {
  display: none;
  position: absolute;
  background-color: black;
  right: 10px;
  border: 1px solid lightgrey ;
  color: white;
  z-index: 1;
}

.show-body-dark .nav-dropdown-content p:hover {
  background-color: rgb(236, 241, 243);
  color: black
}



/* Dark Mode */

/* Stock Bar*/

.stock-bar {
  position: fixed;
  right: 10%;
  top: 6em;
  display: block;
  border-radius: 0.25em;
  width: 18em;
  height: 30em;
  border: 1px solid grey;
  box-shadow: 0 0 10px rgba(128, 128, 128, 0.575);
  overflow-y: auto;
}

.stock-bar::-webkit-scrollbar {
  display: none;
}

.stock-bar-header {
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: large;
  font-weight: bold;
  color: black;
  width: 100%;
  height: 3em;
  border-bottom: 1px solid grey;
}
/* ... */

